Revert "Fixed buggy toolbar behaviour when toggling visibility in mobile mode."
This reverts commit 25f0b9b1ac9493cd0f67fd57561942dea4ebb0ed.

--- a/gui/css/main.css
+++ b/gui/css/main.css
@@ -2203,7 +2203,7 @@
   }
   .sub-category {
     color: #fff;
-    display: block!important;
+    display: block;
     padding: 0.75em;
     width: auto;
   }
